--- a/custom_components/monitormysolar/manifest.json
+++ b/custom_components/monitormysolar/manifest.json
@@ -4,12 +4,12 @@
   "codeowners": ["@zakery292"],
   "config_flow": true,
   "dependencies": ["mqtt"],
-  "documentation": "https://github.com/zakery292/monitormysolar",
+  "documentation": "https://github.com/Monitor-My-Solar/monitormysolar",
   "integration_type": "device",
   "iot_class": "local_push",    
-  "issue_tracker": "https://github.com/zakery292/monitormysolar/issues",
+  "issue_tracker": "https://github.com/Monitor-My-Solar/monitormysolar",
   "loggers": [],
-  "requirements": ["MQTT", "aiohttp"],    
-  "version": "1.3.2"
+  "requirements": [],    
+  "version": "3.0.0"
 }
 
